[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "geonature"
description = "Application de saisie et de synthèse des observations faune et flore"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Parcs nationaux des Écrins et des Cévennes", email = "geonature@ecrins-parcnational.fr" },
]
urls = { Homepage = "https://github.com/PnX-SI/GeoNature/" }
classifiers = [
  "Framework :: Flask",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = ["version"]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
  "bokeh==3.4.1",
  "celery[redis]>=5.6.3",
  "chardet>=7.4.3",
  "click>=7.0",
  "fiona>=1.9.6",
  "flask<=3.1.1",
  "flask-admin>=2.1.0",
  "flask-babel>=4.0.0",
  "flask-cors>=6.0.5",
  "flask-mail>=0.10.0",
  "flask-marshmallow>=1.5.0",
  "flask-migrate>=4.1.0",
  "flask-sqlalchemy>=3.0.5",
  "flask-weasyprint>=1.1.0",
  "flask-wtf>=1.3.0",
  "geojson>=3.2.0",
  "gunicorn>=19.8.0",
  "importlib-metadata>=9.0.0",
  "jsonschema>=4.26.0",
  "lxml>=6.1.1",
  "marshmallow>=4.3.0",
  "marshmallow-sqlalchemy>=1.5.0",
  "packaging>=26.2",
  "pandas>=2.3.3",
  "pillow>=11",
  "psycopg2>=2.9.12",
  "pypn-habref-api>=0.4.2,<1",
  "pypn-ref-geo>=1.5.6,<2",
  "pypnnomenclature>=1.6.7,<2",
  "pypnusershub>=3.2.2,<4",
  "pyproj<3.9 ; python_full_version < '3.10'",
  "pyproj>=3.7.1 ; python_full_version >= '3.10'",
  "python-dateutil>=2.9.0.post0",
  "shapely>=2.0.0",
  "sqlalchemy<2.0",
  "taxhub>=2.3.0",
  "toml>=0.10.2",
  "utils-flask-sqlalchemy>=0.4.5,<1",
  "utils-flask-sqlalchemy-geo>=0.3.4,<1",
  "weasyprint>=68.1",
  "wtforms==3.1.2",
  "wtforms-sqlalchemy>=0.4.2",
  "xmltodict>=1.0.4",
]

[project.scripts]
geonature = "geonature.core.command:main"

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["geonature*"]

[tool.setuptools.package-data]
geonature = ["**/templates/**/*.html"]
"geonature.tests" = ["data/*.sql"]
"geonature.migrations" = ["alembic.ini", "script.py.mako", "data/**/*.sql"]

[tool.setuptools.dynamic]
version = { file = "VERSION" }
dependencies = { file = "backend/requirements.txt" }

[project.optional-dependencies]
dev = [
  "pandas",
  "pytest",
  "pytest-flask",
  "pytest-benchmark",
  "pytest-cov",
  "jsonschema",
  "pandas",
  'black>=26.1.0',
]
doc = ["sphinx", "furo", "myst-parser", "sphinx-autoapi", "sphinx-copybutton"]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["backend/geonature/tests/"]
addopts = "--benchmark-skip"

[tool.coverage.run]
source = [
  "backend/geonature/",
  "contrib/occtax/backend/occtax/",
  "contrib/gn_module_occhab/backend/gn_module_occhab/",
  "contrib/gn_module_validation/backend/gn_module_validation/",
]
omit = ["*/tests/*", "*/migrations/*", "backend/geonature/core/command/*"]

[tool.black]
line-length = 100
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
    | dependencies
  )/
)
'''

[tool.isort]
profile = "black"

[tool.pylint.format]
max-line-length = "100"
