[project]
name = "GeoNature"

[tool.black]
line-length = 99
exclude ='''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | node_modules
    | venv
  )/
)
'''
